# llama.ttf

./: README.md
getrandom/: Cargo.toml
getrandom/src/: js.rs
llamattf/: Makefile
llamattf/src/: lib.rs
t5-quantized/: Cargo.toml
t5-quantized/src/: lib.rs
translatetff/: .gitignore  Makefile
translatettf/: .gitignore  Cargo.toml  Makefile
