[package]
name = "translatettf"
version = "0.1.0"
edition = "2021"

[dependencies]
harfbuzz-wasm = { path = "../harfbuzz-wasm" }
t5-quantized = { path = "../t5-quantized" }
wasm-bindgen = "0.2.87"
getrandom = "0.2.15"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"

[patch.crates-io]
getrandom = { path = "../getrandom" }
